<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.result.ResultFragment">


    <TextView
        android:id="@+id/result_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/distance_imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/result_distance"
        android:src="@drawable/ic_route"
        app:layout_constraintBottom_toBottomOf="@id/distanceTitle_textView"
        app:layout_constraintEnd_toStartOf="@id/distanceTitle_textView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/distanceTitle_textView"
        app:tint="@color/text_color" />

    <TextView
        android:id="@+id/distanceTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/result_distance"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/distance_imageView"
        app:layout_constraintTop_toBottomOf="@+id/result_textView" />

    <TextView
        android:id="@+id/distanceValue_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/result_0m"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_imageView" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/result_time"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="@id/timeTitle_textView"
        app:layout_constraintEnd_toStartOf="@id/timeTitle_textView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/timeTitle_textView"
        app:tint="@color/text_color" />

    <TextView
        android:id="@+id/timeTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/result_time"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/time_imageView"
        app:layout_constraintTop_toBottomOf="@+id/distanceValue_textView" />

    <TextView
        android:id="@+id/timeValue_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_imageView"
        tools:text="00:00:00" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/result_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeValue_textView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/distance_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="distance_imageView,distanceTitle_textView,distanceValue_textView"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/time_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="time_imageView,timeTitle_textView,timeValue_textView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>